--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "base-64": "^1.0.0",
     "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
+    "dotenv": "^9.0.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
