--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-paginate": "^1.0.2",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "node-zendesk": "^2.0.7",
