--- a/.env
+++ b/.env
@@ -1,10 +1,3 @@
 #This is where Zendesk authentication details live.
 
-# Username 
-zendeskemail='iusharnina@gmail.com'
-
-# Token
-zendesktoken='xn6R6HwQTO8WoYkGFhuA2kzKRERNzUieKVKQ4l3k'
-
-# URl
-zendeskurl='https://ediamondhelp.zendesk.com/api/v2'
+#contents deleted
